--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 <body>
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="javascript:void(0)">Fiap</a>
+			<a class="navbar-brand" href="/">Fiap</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -26,7 +26,6 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/categoria">Categoria</a>
-					</li>
 					</li>
 				</ul>
 				<form class="d-flex">
