--- a/src/main/resources/templates/produto/index.html
+++ b/src/main/resources/templates/produto/index.html
@@ -25,7 +25,7 @@
 						<a class="nav-link" href="/fornecedor">Fornecedor</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="javascript:void(0)">Link</a>
+						<a class="nav-link" href="/categoria">Categoria</a>
 					</li>
 				</ul>
 				<form class="d-flex">
